styled: fixed padding and height on mobile app info page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -148,7 +148,8 @@ footer {
             &:last-of-type {
                 display: block;
                 background-color: $color1;
-                max-height: 45px;
+                max-height: 60px;
+                padding-top: 50px;
             }
         }
 
